--- a/designersworkshop.html
+++ b/designersworkshop.html
@@ -113,117 +113,117 @@
                 <option value="ElementXV">Fashion History</option> <!-- Element 14 -->
             </select>
         </section>
-        <section class="D6" class="INT" id="sec1">
+        <section class="D6" id="sec1">
             <h2>Top Lessons</h2>
-            <article>
+            <article class="INT">
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/download.jpeg" alt="aa">
+                    <h4>How to better improve your designs and create better collections</h4>
+                    <p>July 5, 2023</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/How-to-Become-a-Fashion-Designer.webp" alt="aa">
+                    <h4>Step by step of sewing by hand</h4>
+                    <p>May 18, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/fashion-design.png" alt="aa">
+                    <h4>Preparing your collection 101: What to do before presenting</h4>
+                    <p>September 3, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/0x0.webp" alt="aa">
+                    <h4>How to study Fashion History</h4>
+                    <p>August 21, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/fashion forbes 570x390.jpg" alt="aa">
+                    <h4>How to use a sewing machine</h4>
+                    <p>March 22, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/fit-fashion-design-our-work-fof-2024.jpg" alt="aa">
+                    <h4>How to understand the elements of design</h4>
+                    <p>January 15, 2024</p>
                 </section>
             </article>
             <div class="centered">
                 <button><a href="">More Top Lessons</a></button>
             </div>
             <h2>Most Recent</h2>
-            <article>
+            <article class="INT">
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/Fashion-Banner.webp" alt="aa">
+                    <h4>How to find fabrics for designing apparel</h4>
+                    <p>October 12, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/school-of-fashion-banner2.jpg" alt="aa">
+                    <h4>Finding inspiration for your designs</h4>
+                    <p>October 9, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/street_style_fashion_1.jpg" alt="aa">
+                    <h4>Embroidery: Various Patterns and how to do them</h4>
+                    <p>October 4, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/richard_roelofse_womens_wear_design_03a.jpg" alt="aa">
+                    <h4>Choosing the right color string for your thread</h4>
+                    <p>September 30, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/Picture12-1024x683.jpg" alt="aa">
+                    <h4>Color Schemes 101 What complements and what clashes?</h4>
+                    <p>September 17, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/fashion-design-career-tips-2.jpg" alt="aa">
+                    <h4>Hemlines: How long or short and how to create them</h4>
+                    <p>September 1, 2024</p>
                 </section>
             </article>
             <div class="centered">
                 <button><a href="">More Most Recent</a></button>
             </div>
             <h2>For You</h2>
-            <article>
+            <article class="INT">
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/Fashion designer drawing and measuring a mannequin-1.webp" alt="aa">
+                    <h4>Sewing Buttons 101</h4>
+                    <p>June 1, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/woman-wearing-high-fashion-red-and-turquoise-dress-in-the-ocean-683x1024.jpg" alt="aa">
+                    <h4>How to create different styles (Shirts)</h4>
+                    <p>December 22, 2023</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/4468256_f8cf.webp" alt="aa">
+                    <h4>How to create different styles (Pants & Skirts)</h4>
+                    <p>November 5, 2023</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/Fashion design studio.jpg" alt="aa">
+                    <h4>Creating Form-fitting clothes</h4>
+                    <p>October 1, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/drawing2.jpg" alt="aa">
+                    <h4>Adding Decorations</h4>
+                    <p>September 10, 2024</p>
                 </section>
                 <section>
-                    <img src="" alt="aa">
-                    <h4></h4>
-                    <p></p>
+                    <img src="Assets/LessonImages/Stocksy_txp602ea8cej9Q000_Medium_108544__1__optimized.jpg" alt="aa">
+                    <h4>Warm & Cool Colors: How to utilize them in designs</h4>
+                    <p>January 15, 2024</p>
                 </section>
             </article>
             <div class="centered">
                 <button><a href="">More For You</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec2">
+        <section class="DP INT" id="sec2">
             <h2>Lessons: Art Directing</h2>
             <article>
                 <section>
@@ -291,7 +291,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec3">
+        <section class="DP INT" id="sec3">
             <h2>Lessons: Sewing</h2>
             <article>
                 <section>
@@ -359,7 +359,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec4">
+        <section class="DP INT" id="sec4">
             <h2>Lessons: Company Management</h2>
             <article>
                 <section>
@@ -427,7 +427,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec5">
+        <section class="DP INT" id="sec5">
             <h2>Lessons: Styling and Modeling</h2>
             <article>
                 <section>
@@ -495,7 +495,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec6">
+        <section class="DP INT" id="sec6">
             <h2>Lessons: Fashion Design</h2>
             <article>
                 <section>
@@ -563,7 +563,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec7">
+        <section class="DP INT" id="sec7">
             <h2>Lessons: Theme Inspiration</h2>
             <article>
                 <section>
@@ -631,7 +631,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec8">
+        <section class="DP INT" id="sec8">
             <h2>Lessons: Shirts and Tops</h2>
             <article>
                 <section>
@@ -699,7 +699,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec9">
+        <section class="DP INT" id="sec9">
             <h2>Lessons: Pants, Skirts, and Bottoms</h2>
             <article>
                 <section>
@@ -767,7 +767,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec10">
+        <section class="DP INT" id="sec10">
             <h2>Lessons: Shoes</h2>
             <article>
                 <section>
@@ -835,7 +835,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec11">
+        <section class="DP INT" id="sec11">
             <h2>Lessons: Color Theory</h2>
             <article>
                 <section>
@@ -903,7 +903,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec12">
+        <section class="DP INT" id="sec12">
             <h2>Lessons: Patterns and Lines</h2>
             <article>
                 <section>
@@ -971,7 +971,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec13">
+        <section class="DP INT" id="sec13">
             <h2>Lessons: Formalwear</h2>
             <article>
                 <section>
@@ -1039,7 +1039,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec14">
+        <section class="DP INT" id="sec14">
             <h2>Lessons: Accessories</h2>
             <article>
                 <section>
@@ -1107,7 +1107,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP" class="INT" id="sec15">
+        <section class="DP INT" id="sec15">
             <h2>Lessons: Fashion History</h2>
             <article>
                 <section>
