--- a/designersworkshop.html
+++ b/designersworkshop.html
@@ -94,7 +94,7 @@
         </form>
         <section id="SelectSec">
             <h2 class="scripts">Filter for a Lesson Theme</h2>
-            <select id="choose" name="theme">
+            <select id="choose" name="theme" onchange="DropTheme()">
                 <!-- This f*cking part of the primary dropdown section is very complex here! -->
                 <option value="ElementI">Choose a Lesson Theme!</option> <!-- Element 0 -->
                 <option value="ElementII">Art Directing</option> <!-- Element 1 -->
@@ -113,7 +113,7 @@
                 <option value="ElementXV">Fashion History</option> <!-- Element 14 -->
             </select>
         </section>
-        <section class="D6" id="sec1">
+        <section class="D6 visible" id="sec1">
             <h2>Top Lessons</h2>
             <article class="INT">
                 <section>
@@ -223,7 +223,7 @@
                 <button><a href="">More For You</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec2">
+        <section class="DP INT hidden" id="sec2">
             <h2>Lessons: Art Directing</h2>
             <article>
                 <section>
@@ -291,7 +291,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec3">
+        <section class="DP INT hidden" id="sec3">
             <h2>Lessons: Sewing</h2>
             <article>
                 <section>
@@ -359,7 +359,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec4">
+        <section class="DP INT hidden" id="sec4">
             <h2>Lessons: Company Management</h2>
             <article>
                 <section>
@@ -427,7 +427,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec5">
+        <section class="DP INT hidden" id="sec5">
             <h2>Lessons: Styling and Modeling</h2>
             <article>
                 <section>
@@ -495,7 +495,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec6">
+        <section class="DP INT hidden" id="sec6">
             <h2>Lessons: Fashion Design</h2>
             <article>
                 <section>
@@ -563,7 +563,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec7">
+        <section class="DP INT hidden" id="sec7">
             <h2>Lessons: Theme Inspiration</h2>
             <article>
                 <section>
@@ -631,7 +631,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec8">
+        <section class="DP INT hidden" id="sec8">
             <h2>Lessons: Shirts and Tops</h2>
             <article>
                 <section>
@@ -699,7 +699,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec9">
+        <section class="DP INT hidden" id="sec9">
             <h2>Lessons: Pants, Skirts, and Bottoms</h2>
             <article>
                 <section>
@@ -767,7 +767,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec10">
+        <section class="DP INT hidden" id="sec10">
             <h2>Lessons: Shoes</h2>
             <article>
                 <section>
@@ -835,7 +835,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec11">
+        <section class="DP INT hidden" id="sec11">
             <h2>Lessons: Color Theory</h2>
             <article>
                 <section>
@@ -903,7 +903,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec12">
+        <section class="DP INT hidden" id="sec12">
             <h2>Lessons: Patterns and Lines</h2>
             <article>
                 <section>
@@ -971,7 +971,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec13">
+        <section class="DP INT hidden" id="sec13">
             <h2>Lessons: Formalwear</h2>
             <article>
                 <section>
@@ -1039,7 +1039,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec14">
+        <section class="DP INT hidden" id="sec14">
             <h2>Lessons: Accessories</h2>
             <article>
                 <section>
@@ -1107,7 +1107,7 @@
                 <button><a href="">More Lessons</a></button>
             </div>
         </section>
-        <section class="DP INT" id="sec15">
+        <section class="DP INT hidden" id="sec15">
             <h2>Lessons: Fashion History</h2>
             <article>
                 <section>
