--- a/topnews.html
+++ b/topnews.html
@@ -107,7 +107,7 @@
             </article>
             <article id="text-noteB">
                 <!---->
-                <img src="Assets/ArticleImages/_CIK0894.webp" alt="TTT">
+                <img src="Assets/ArticleImages/052623-style-tips-lead-051015daa6224e0b834cf55b2082f158.jpg" alt="TTT">
                 <article class="Terminal">
                 <p>HIGHLIGHTS '24</p>
                 <h4>What are the new trends for this New York Fashion Week in Fall 2024?</h4>
