--- a/topnews.html
+++ b/topnews.html
@@ -13,7 +13,7 @@
 <header>
     <div class="UpperTitle">
         <img class="Logo-Image" src="Assets/Logo/Primary Logo.png">
-        <h1 class="MainTitle"><a href="index (homepage).html">World of Fashion</a></h1>
+        <h1 class="MainTitle"><a href="index.html">World of Fashion</a></h1>
     </div>
     <div id="TopNav">
         <nav>
